--- a/_posts/2016-01-05-tooling-2.markdown
+++ b/_posts/2016-01-05-tooling-2.markdown
@@ -19,18 +19,18 @@ Try your browser again. bundle.js has all the stuff for both files now. Now we c
 In ClientApp.js, remove the global comment at the top and add at the top
 
 ```javascript
-import React from 'react';
-import { render } from ('react-dom');
+import React from "react";
+import { render } from "react-dom";
 
 // change render
-render(React.createElement(MyFirstComponent), document.getElementById('app'));
+render(React.createElement(MyFirstComponent), document.getElementById("app"));
 ```
 
 In MyTitle, add:
 
 ```javascript
 // remove global comment, add at top
-import React from 'react';
+import React from "react";
 
 // add to bottom
 export default MyTitle;
@@ -46,7 +46,7 @@ We're also using ES6 modules here, if you're not familiar with that syntax. The 
 
 Babel is an amazing, amazing tool that has fundamentally altered the landscape of JavaScript as we know. Though they didn't invent the idea of transpiling future syntax of JavaScript into current syntax (thanks Traceur,) they did make it so damn _easy_. Couple that with the fact it worked with React's JSX (which we'll talk about in a sec) and it was a perfect storm the be massively successful. Babel, in short, is amazing and should be something you consider for every project.
 
-Babel 6 (the latest revision of Babel) took away a tiny bit of that ease of use but in return it became much easier to develop which is important  when you're maintaining a massive project that's very important. In return it requires a bit of config now.
+Babel 6 (the latest revision of Babel) took away a tiny bit of that ease of use but in return it became much easier to develop which is important when you're maintaining a massive project that's very important. In return it requires a bit of config now.
 
 Create a new file called .babelrc. Inside .babelrc, put:
 
@@ -54,13 +54,16 @@ Create a new file called .babelrc. Inside .babelrc, put:
 {
   "presets": [
     "react",
-    ["env", {
-      "targets": {
-        "browsers": "last 2 versions"
-      },
-      "loose": true,
-      "modules": false
-    }]
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": "last 2 versions"
+        },
+        "loose": true,
+        "modules": false
+      }
+    ]
   ]
 }
 ```
@@ -71,24 +74,23 @@ However, we've taken this a step further by using [babel-preset-env][bpe]. babel
 
 Also, we're telling Babel to _not_ transform modules. New to Webpack 2 is the ability to do tree shaking. Tree shaking (also known as live code inclusion, as opposed to dead code elimination) is where you start with the entry point to your program (usually an index.js) and begin working outwards, only including the parts of code your code uses. Usually this doesn't buy you much in terms of _your_ code; we tend to not write much dead code for our own apps. However it's extremely helpful for modules you're including. If you use lodash for one function, you don't want to include the whole library. Instead, you want your bundler to just include that barebones of what you need for to work. This is what Webpack 2 and Uglify buy for us; Webpack 2 bundles and Uglify takes the dead code paths out.
 
-
 ## Webpack loaders
 
 So, we could use the Babel CLI to compile our code but we are already using Webpack and Webpack has a good way to send your code through Babel via its loader mechanism. Loaders are utilities that Webpack will pipe input into and accept output out of. You can use loaders to transpile things like CoffeeScript, TypeScript, or PureScript. Webpack loaders can do some other powerful things like allowing you to _include_ CSS, inline images via encoding, and transform SVGs. We're just going to be using the JS transformation abilities for now. Run the command `webpack --module-bind 'js=babel-loader' js/ClientApp.js public/bundle.js`. Should take a bit longer since it's doing more. Since we're going to be using Webpack for a few other things, let's abstract that configuration from inline to a config file. Add a `webpack.config.js` with the following.
 
 ```javascript
-const path = require('path');
+const path = require("path");
 
 module.exports = {
   context: __dirname,
-  entry: './js/ClientApp.js',
-  devtool: 'source-map',
+  entry: "./src/ClientApp.js",
+  devtool: "source-map",
   output: {
-    path: path.join(__dirname, 'public'),
-    filename: 'bundle.js'
+    path: path.join(__dirname, "public"),
+    filename: "bundle.js"
   },
   resolve: {
-    extensions: ['.js', '.jsx', '.json']
+    extensions: [".js", ".jsx", ".json"]
   },
   stats: {
     colors: true,
@@ -99,12 +101,11 @@ module.exports = {
     rules: [
       {
         test: /\.jsx?$/,
-        loader: 'babel-loader'
+        loader: "babel-loader"
       }
     ]
   }
 };
-
 ```
 
 What you see is essentially a config version of what we were doing with CLI flags. Now it's a bit more resilient and guaranteed consistent. If you run just the command `webpack` from your project directory you should get the same output. Neat. Go change you npm script to just be "webpack" now. Go try it and make sure it still works. Great! Good? Good. This should get us to a point now where we can talk about JSX.
