--- a/_posts/2016-01-07-react-2.markdown
+++ b/_posts/2016-01-07-react-2.markdown
@@ -14,25 +14,25 @@ Add this to index.html: `<link rel="stylesheet" href="/public/style.css" />`. Fr
 
 Let's start building our app. You can delete MyTitle.jsx if you desire; you can also leave it. We're not going to be using it any further. Go ahead and clear out most ClientApp.jsx and let's start putting our new app in here.
 
-Oh, and you also have to name your video service. I named mine svideo but name your app whatever you want!
+Oh, and you also have to name your video service. I named mine Te Big Show but name your app whatever you want!
 
 Right now it's going to be pretty simple. Drop in this:
 
 ```javascript
-import React from 'react';
-import { render } from 'react-dom';
+import React from "react";
+import { render } from "react-dom";
 
 const App = () => (
   <div className="app">
     <div className="landing">
-      <h1>svideo</h1>
+      <h1>The Big Show</h1>
       <input type="text" placeholder="Search" />
       <a>or Browse All</a>
     </div>
   </div>
 );
 
-render(<App />, document.getElementById('app'));
+render(<App />, document.getElementById("app"));
 ```
 
 Just in case you're not familiar, notice that we have no curly braces and only parens around our JSX. This means there's an implicit return and it's required by the Airbnb rules. If this is confusing for you, I recommend the [2ality post on it][2ality].
@@ -52,11 +52,15 @@ Just like we're using the babel-loader to transpile our code, we're going to use
 
 Let's change our webpack config to use our new eslint-loader. eslint will automatically use our .eslintrc.json, regardless is called via the CLI or programmatically via webpack.
 
+```bash
+npm install eslint-loader
+```
+
 ```javascript
 // inside rules, before babel-loader
 {
   enforce: "pre",
-  test: /\.js$/,
+  test: /\.jsx?$/,
   loader: "eslint-loader",
   exclude: /node_modules/
 }
@@ -68,6 +72,10 @@ Nice! Any time you save now using `yarn watch` it will both compile your code _a
 
 Now let's switch to the Webpack dev server which makes things just that much easier. The Webpack dev server speeds up development by letting you run a local server and serve all your content from the dev server. It watches and keeps everything in memory so rebuilds go faster. Add the following to your server to get it to serve your statics correctly:
 
+```bash
+npm install webpack-dev-server
+```
+
 ```javascript
 // add as a top level config item
 devServer: {
@@ -75,7 +83,7 @@ devServer: {
 },
 ```
 
-Now try running this from the directory of your project: `./node_modules/webpack-dev-server/bin/webpack-dev-server.js`. You could install this globally but we'll use npm's cli to make this easy. You should see in your CLI a bunch output from the build and probably some linter errors. Feel free to fix your errors but now you should be able to go `http://localhost:8080` to see your project running. You should also see the build output in the console of the browser. Cool! Add the following line to your npm scripts: `"dev": "webpack-dev-server",`. Now you can do `yarn dev` and your code will start building and serving right away!
+Now try running this from the directory of your project: `./node_modules/webpack-dev-server/bin/webpack-dev-server.js`. You could install this globally but we'll use npm's cli to make this easy. You should see in your CLI a bunch output from the build and probably some linter errors. Feel free to fix your errors but now you should be able to go `http://localhost:8080` to see your project running. You should also see the build output in the console of the browser. Cool! Add the following line to your npm scripts: `"dev": "webpack-dev-server",`. Now you can do `npm run dev` and your code will start building and serving right away!
 
 But first let's keep going with our app. Our landing is pretty much done for now. We want to start working on the browse all page, but we need to move onto the router to do that real quick.
 
